--- a/about.html
+++ b/about.html
@@ -48,9 +48,9 @@
             <p>Hello world. I am...</p>
             <h1>Calvin Vert Li</h1>
             <p>Or you might know me as my Chinese name... But since my father said he just randomly named me as he was lazy in that time, I am not going to tell you my Chinese name. (If you are curious, go find it out; it is somewhere in my website.)</p>
-            <p>I am currently a year 4 undergraduate student at <u>University of Waterloo</u> and my majors are <u>Computational Mathematics</u> and <u>Statistics</u>.</p>
+            <p>I am currently a year 4 undergraduate student at <u>University of Waterloo</u> and my majors are <u>Computational Mathematics</u> and <u>Statistics</u>. I also have <u>Computing Option</u> with me but I may be able to remove it and get <u>Computer Science</u> minor before I graduate.</p>
             
-            <p>Some of my interests relate to my majors are <span class="keyword">software development</span>, <span class="keyword">web development</span>, <span class="keyword">game development</span>, etc.</p>
+            <p>Some of my interests relate to my majors are <span class="keyword">computer graphics</span>, <span class="keyword">web development</span>, <span class="keyword">game development</span>, etc.</p>
             
             <p>I am also interested on arts and design. For example, <span class="keyword">drawing</span>, <span class="keyword">animation</span>, <span class="keyword">printmaking</span>, <span class="keyword">architectural design</span>, <span class="keyword">furniture design</span>, <span class="keyword">product design</span>, <span class="keyword">interior design</span>, <span class="keyword">advertisement design</span>, <span class="keyword">package design</span>, <span class="keyword">illustration design</span>, etc.</p>
 
@@ -158,22 +158,28 @@
               <h1>Work Experience</h1>
               <table>
                 <tr>
-                  <td class="top left" colspan="2"><img src="img/edUHK.png"></td>
+                  <td class="top left"><img src="img/edUHK.png"></td>
                 </tr>
                 <tr>
-                  <td class="left" colspan="2"><h3>The Education Unviersity of Hong Kong - Office of the Chief Information Officer (OCIO)</h3></td>
+                  <td class="left"><h3>The Education Unviersity of Hong Kong - Office of the Chief Information Officer (OCIO)</h3></td>
+                </tr>
+                <tr>
+                  <td class="left">&nbsp;</td>
                 </tr>
                 <tr>
                   <td class="left"><h4>Student Helper - IT Intern (Programming)</h4></td>
-                  <td class="right"><h4>Sept. 2019 - Dec. 2019 (Yes, NOW!)</h4></td>
                 </tr>
                 <tr>
-                  <td class="left" colspan="2">Currently, I am in the Student Administration (SA) team. My job is to help the team modify and transfer data from the old school system to the new one (Banner 9 by Ellucian) by Java, XML, and SQL.<br>
-                  But for now, I am still training to be familiar with the IDE and the system.
-                   </td>
+                  <td class="left"><h4>Sept. 2019 - Dec. 2019 (Yes, NOW!)</h4></td>
                 </tr>
                 <tr>
-                  <td class="left" colspan="2">&nbsp;</td>
+                  <td class="left">&nbsp;</td>
+                </tr>
+                <tr>
+                  <td class="left" colspan="2">Currently, I am in the Student Administration (SA) team.<br>My job is to create data forms for the new school system based on the old one by using Java, XML, and PL/SQL. Thus, school members can access and modify data with the new system when it is ready to publish.</td>
+                </tr>
+                <tr>
+                  <td class="left">&nbsp;</td>
                 </tr>
               </table>
             </div>
