--- a/about.html
+++ b/about.html
@@ -169,16 +169,16 @@
                   <td class="left">&nbsp;</td>
                 </tr>
                 <tr>
-                  <td class="left"><h4>Student Helper - IT Intern (Programming)</h4></td>
+                  <td class="left"><h4>IT Intern (Programming)</h4></td>
                 </tr>
                 <tr>
-                  <td class="left"><h4>Sept. 2019 - Dec. 2019 (Yes, NOW!)</h4></td>
+                  <td class="left"><h4>02nd Sept. 2019 - 20th Dec. 2019</h4></td>
                 </tr>
                 <tr>
                   <td class="left">&nbsp;</td>
                 </tr>
                 <tr>
-                  <td class="left" colspan="2">Currently, I am in the Student Administration (SA) team.<br>My job is to create data forms for the new school system based on the old one by using Java, XML, and PL/SQL. Thus, school members can access and modify data with the new system when it is ready to publish.</td>
+                  <td class="left" colspan="2">I was in the Student Administration (SA) team.<br>My job was to create data forms for the new school system based on the old one by using Java, XML, and PL/SQL. Thus, school members can access and modify data with the new system when it is ready to publish.</td>
                 </tr>
                 <tr>
                   <td class="left">&nbsp;</td>
