--- a/cs246_1.html
+++ b/cs246_1.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="./css/font-awesome-5.8.1/all.css" />
     </head>
     
-    <body onload="restHeight('about')" onresize="location.reload()>
+    <body>
         <div class="topnav" id="myTopnav">
             <a href="./index.html" class="active">Calvin Li</a>
             <a href="./about.html">About</a>
