--- a/cs246_4.html
+++ b/cs246_4.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="./css/skin.css">
     </head>
     
-    <body onload="restHeight('about')" onresize="location.reload()">
+    <body>
         <div class="topnav" id="myTopnav">
             <a href="./index.html" class="active">Calvin Li</a>
             <a href="./about.html">About</a>
