--- a/contact.html
+++ b/contact.html
@@ -18,18 +18,6 @@
       <a href="./arts.html">Arts</a>
       <a href="./contact.html">Contact</a>
       <div class="topnav-right">
-        <!-- reverse order plz! (as my CSS sucks) -->
-<!--
-        <div class="dropdown">
-          <button class="dropbtn">Course Notes
-          <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="dropdown-content">
-            <a href="./notes.html">CS 230</a>
-            <a href="./notes.html">CS 246</a>
-          </div>
-        </div>
--->
         <a href="/doc/NewResume_CKLI.pdf">Résumé</a>
       </div>
       <a href="javascript:void(0);" class="icon" onclick="navbarUse()">
@@ -40,8 +28,8 @@
     <div class="container">
       <section id="contact">
         <h1>Contact <scan class="keyword">Me</scan></h1>
-        <p>I am currently looking for 4-month long internship starting at May 2020.<br>
-        If you know any opportunities about web development, software development, game development, or game arts field...<br>
+        <p>I am currently looking for full time job starting at September 2021.<br>
+        If you know any opportunities about web development or software development field...<br>
         Please let me know!</p>
         <p>Otherwise...<br>Feel free to message me if you want to have a chat!</p>
         
@@ -86,7 +74,7 @@
         <a href = "https://www.instagram.com/vert_arts/" target = "_blank;"><i class="fab fa-instagram fa-2x"></i></a>
         <a href = "https://github.com/vertli" target = "_blank;"><i class="fab fa-github-square fa-2x"></i></a>
         <!-- icons -->
-        <p>Chun Kit (Calvin Vert) Li &copy; 2017 - 2019</p>
+        <p>Chun Kit (Calvin Vert) Li &copy; 2017 - 2020</p>
       </footer>
     </div>
     
