--- a/projects.html
+++ b/projects.html
@@ -104,7 +104,7 @@
               <table>
                 <tr>
                   <td><h4>Quadris</h4></td>
-				  <td class="rightSide"><a href = "https://github.com/vertli/vertli.github.io" target = "_blank;"><i style = "color: gray" class="fab fa-github-square fa-2x"></i></a></td>
+				  <td class="rightSide"><i style = "color: gray" class="fab fa-github-square fa-2x"></i></td>
                 </tr>
               </table>
               <table>
@@ -169,7 +169,7 @@
               <table>
                 <tr>
                   <td><h4>Mine Sweeper</h4></td>
-				  <td class="rightSide"><a href = "https://github.com/vertli/vertli.github.io" target = "_blank;"><i style = "color: gray" class="fab fa-github-square fa-2x"></i></a></td>
+				  <td class="rightSide"><i style = "color: gray" class="fab fa-github-square fa-2x"></i></td>
                 </tr>
               </table>
               <table>
