--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
                   <td class="top left"><img src="img/edUHK.png"></td>
                 </tr>
                 <tr>
-                  <td class="left"><h3>The Education Unviersity of Hong Kong - Office of the Chief Information Officer (OCIO)</h3></td>
+                  <td class="left"><h3>The Education University of Hong Kong - Office of the Chief Information Officer (OCIO)</h3></td>
                 </tr>
                 <tr>
                   <td class="left">&nbsp;</td>
