--- a/projects.html
+++ b/projects.html
@@ -70,14 +70,14 @@
               </div>
               <table>
                 <tr>
-                  <td><h4>Persaonal Website</h4></td>
+                  <td><h4>Personal Website</h4></td>
                   <td class="rightSide"><a href = "https://github.com/vertli/vertli.github.io" target = "_blank;"><i class="fab fa-github-square fa-2x"></i></a></td>
                 </tr>
               </table>
               <table>
                 <tr>
                   <td class="thd">Language:</td>
-                  <td>HTML, CSS, Javascript</td>
+                  <td>HTML, CSS, JavaScript</td>
                 </tr>
               </table>          
             </div>
@@ -142,7 +142,7 @@
               <table>
                 <tr>
                   <td class="thd">Language:</td>
-                  <td>HTML, CSS, Javascript, Node.js</td>
+                  <td>HTML, CSS, JavaScript, Node.js</td>
                 </tr>
               </table>          
             </div>
