--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,43 @@
       </div>
 
       <div class="row">
+        <!-- Image Classification - Fashion-MNIST -->
+        <div class="card web col-6 col-sm-6 col-md-6">
+          <div class="content">
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="./img/fashionNMIST/trainingProgess.PNG">
+                </div>
+                <div class="flip-card-back">
+                  <div class="back-text">
+                    <h4>Summary</h4>
+                    <p>A image classification for my second Kaggle comeptition for one of my
+                      university statistics courses (STAT441/841/CM763).<br>
+                      This project implemented a convolutional neural network model and the accuracy was 93.66%.<br>
+                      For more detail, click the hyperlink icon below (next to the title "Fashion-MNIST").</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <table>
+              <tr>
+                <td>
+                  <h4>Fashion-MNIST</h4>
+                </td>
+                <td class="rightSide"><a href="./projects/fashionMNIST.html"><i class="fas fa-link"></i></a>
+                </td>
+              </tr>
+            </table>
+            <table>
+              <tr>
+                <td class="thd">Language:</td>
+                <td>MATLAB</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+
         <!-- Shadow Water Animation -->
         <div class="card web col-6 col-sm-6 col-md-6">
           <div class="content">
