--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
 
       <div class="row">
         <!-- Image Classification - Fashion-MNIST -->
-        <div class="card web col-6 col-sm-6 col-md-6">
+        <div class="card matlab col-6 col-sm-6 col-md-6">
           <div class="content">
             <div class="flip-card">
               <div class="flip-card-inner">
@@ -77,7 +77,7 @@
         </div>
 
         <!-- Shadow Water Animation -->
-        <div class="card web col-6 col-sm-6 col-md-6">
+        <div class="card matlab col-6 col-sm-6 col-md-6">
           <div class="content">
             <div class="flip-card">
               <div class="flip-card-inner">
