--- a/projects/fashionMNIST.html
+++ b/projects/fashionMNIST.html
@@ -30,7 +30,7 @@
 
     <div class="container">
 
-        <section id="fashionMNIST">
+        <section id="fashionMNIST" class="projectPage">
             <h1 class="keyword">Fashion-MNIST</h1>
 
             <h3>Introduction</h3>
