--- a/projects/fashionMNIST.html
+++ b/projects/fashionMNIST.html
@@ -34,23 +34,26 @@
             <h1 class="keyword">Fashion-MNIST</h1>
 
             <h3>Introduction</h3>
-            <p>In my second last academic term (Fall 2020) at Waterloo, I took <scan class="keyword">STAT441/841/CM763 (Statistical Learning -
-                Classification)</scan> to learn about machine learning.</p>
-            <p>During that term, there were two Kaggle competitions and one final project we students needed to do.</p>
-            <p>The second Kaggle comeptition was a clothing image classification task; we needed to classify the
-                Fashion-MNIST dataset.</p>
-            <p>However, instead of using the original Fashion-MNIST, we used a csv data file from our professor.</p>
-            <p>My solution for this Kaggle competition is implemented a convolutional neural network (CNN) by using
+            <p>In my second-last academic term (Fall 2020) at Waterloo, I took <a
+                    href="https://ucalendar.uwaterloo.ca/2021/COURSE/course-STAT.html#STAT441" target="_blank;">
+                    <scan class="keyword">STAT441/841/CM763 (<em>Statistical Learning - Classification</em>)</scan></a> 
+                    to learn about machine learning.</p>
+            <p>During that term, there were two Kaggle competitions and one final project we students needed to
+                complete.</p>
+            <p>The second Kaggle competition was a clothing image classification task; we needed to classify the
+                <em>Fashion-MNIST dataset</em>.</p>
+            <p>However, instead of using the original Fashion-MNIST, we used a <em>.csv</em> data file from our professor.</p>
+            <p>My solution for this Kaggle competition is implemented with a convolutional neural network (CNN) using
                 MATLAB, and the accuracy is 93.66%.</p>
-            <p>In this article, I will exlpain how I implemented my solution step-by-step.</p>
+            <p>In this article, I will explain how I derived my solution step-by-step.</p>
             <br>
 
             <h3>Dataset</h3>
-            <p>There are total 60 000 rows in the training csv data file (<em>"image_train_Kaggle.csv"</em>) for this Kaggle
-                competition.</p>
+            <p>A total of 60 000 rows of data are in the training .csv data file (<em>"image_train_Kaggle.csv"</em>) for this
+                Kaggle competition.</p>
             <p>Each row represents a 28x28 image.</p>
-            <p>For every row, we will find the image label follows by 784 pixel values.</p>
-            <p>Label is the class of the image - there are totally 10 classes in this dataset:</p>
+            <p>In every row, we will find the image <strong class="keyword">label</strong> followed by 784-pixel values.</p>
+            <p>The <strong class="keyword">label</strong> is the class of the image which there are 10 classes in this dataset:</p>
             <ol start="0">
                 <li>T-Shirt/Top</li>
                 <li>Trouser</li>
@@ -65,11 +68,11 @@
             </ol>
             <p>Each class includes 6 000 images for the training dataset.</p>
             <br>
-            <p>From the testing csv file (<em>"image_test_Kaggle.csv"</em>), there are in total 10 000 rows.</p>
+            <p>From the testing .csv file (<em>"image_test_Kaggle.csv"</em>), there are in total 10 000 rows.</p>
             <p>Each row represents a 28x28 image.</p>
-            <p>For every row, it starts with an ID follows by 784 pixel values.</p>
+            <p>In every row, it starts with an <strong class="keyword">ID</strong> follows by 784-pixel values.</p>
             <br>
-            <p><strong><em class="warning">P.S.</em></strong> For copyright, I will not public those two datasets.</p>
+            <p><strong><em class="warning">P.S.</em></strong> For copyright reasons, I will not publish those two datasets.</p>
             <br>
 
             <h3>Goal</h3>
@@ -78,20 +81,24 @@
             <br>
 
             <h3>How to do it?</h3>
-            <p>In MATLAB, we can train a CNN model by using the Deep Learning Toolbox.</p>
-            <p>However, we need to convert the csv files to images first - this requires us to use the Image Processing
-                Toolbox.</p>
-            <p>Then, we will create image datasotre objects for store our training data and testing data.</p>
-            <p>Next, we need to design our CNN model model and train it with the training data.</p>
-            <p>Lastly, we use the training CNN model to classify our testing dataset.</p>
+            <p>In MATLAB, we can train a CNN model using the <strong class="keyword">Deep Learning Toolbox</strong>.</p>
+            <p>However, we need to:</p>
+            <ol type="A">
+                <li>First, <u class="keyword">convert</u> the .csv files to images - this requires us to use the <strong class="keyword">Image Processing
+                    Toolbox</strong>.</li>
+                <li>Then, we will <u class="keyword">create</u> image datastore objects to store our training data and testing data.</li>
+                <li>Next, we need to <u class="keyword">design</u> our CNN model model and <u class="keyword">train</u>train it with the training data.</li>
+                <li>Lastly, we use the training CNN model to <u class="keyword">classify</u> our testing dataset.</li>
+            </ol>
+            To complete A - D, I put them into 7 steps.
             <br>
 
             <h3>Step 1: Create Images</h3>
-            <p>Since I want to use image datastore object, I need to convert the given csv files to images.</p>
-            <p>To do so, we first need to create a folder <em>"train"</em> with another 10 subfolders 0 to 9 (which represent the
-                labels).</p>
-            <p>Then, we need to open <em>image_train_Kaggle.csv</em>, convert each row to jpg image, and save it into the
-                subfolder inside the <em>train</em> folder based on the image corrsponding label.</p>
+            <p>Since I want to use an image datastore object, I need to convert the given <em>.csv</em>  files to images.</p>
+            <p>To do so, we first need to create a folder <em>"train"</em> with another 10 subfolders titled 0 to 9 (which
+                represent the labels).</p>
+            <p>Then, we need to open <em>image_train_Kaggle.csv</em>, convert each row into <em>.jpg</em> image, and save 
+                each image into the subfolder that corresponds to the image label (e.g., a pair of running shoes will be saved into subfoler 7).</p>
             <pre class="prettyprint linenums lang-m">
 # create a folder "train" with another 10 subfolders 0 to 9
 for i = 0:9
@@ -135,8 +142,8 @@ end
 clear toFlip i img name TrainX TrainY trainData
 </pre>
             <br>
-            <p>For our testing dataset <em>image_test_Kaggle.csv</em>, we will do the similar thing except we only need to
-                create a folder <em>"test"</em> without any subfolder:</p>
+            <p>For our testing dataset <em>image_test_Kaggle.csv</em>, we will write a similar code, except we only need
+                to create a folder <em>"test"</em> without any subfolders:</p>
             <pre class="prettyprint linenums lang-m"># create a folder "test"
 mkdir("test");
 
@@ -163,7 +170,7 @@ clear i testData TestX TestID name img
 
             <br>
             <h3>Step 2: Create Image Datastores</h3>
-            <p>After creating all training set and testing set images, we need to create datastores for image data
+            <p>After creating all the training set and testing set images, we need to create datastores for the image data
                 before training the convolutional neural network:</p>
             <pre class="prettyprint linenums lang-m">rng(441);
 imds = imageDatastore("./train", ...
@@ -175,16 +182,16 @@ numTrainFiles = round(6000 * 2 * 0.85);
 clear numTrainFiles</pre>
 
             <p>Here, the function <code>rng(441)</code> in line 1 will set the seed to 441.</p>
-            <p>In line 2 and 3, we create an image datastore object and define the labels to be the subfolder names.</p>
-            <p>We will use 85% of the training images to train the network and the rest of training images will be the
-                validation set - this is what line 4 and 5 doing.</p>
+            <p>In lines 2 and 3, we create an image datastore object and define the labels to be the subfolder titles.</p>
+            <p>We will use 85% of the training images to train the network and the rest of the training images will be the
+                validation set - this is what lines 4 and 5 are doing.</p>
             <br>
-            <p>To create the image datastore for testing set, we only need to run one line of code:</p>
+            <p>To create the image datastore for the testing set, we only need to run one line of code:</p>
             <pre class="prettyprint linenums lang-m">imdsTest = imageDatastore("./test");</pre>
 
             <br>
             <h3>Part 3: Create IDs</h3>
-            <p>This part will create the ID column for the "result.csv" - this is the file we need to submit to Kaggle.
+            <p>This part will create the ID column for the <em>"result.csv"</em> - this is the file we need to submit to Kaggle.
             </p>
             <pre class="prettyprint linenums lang-m"># obtain the path for the folder "test"
 path = imdsTest.Files{1};
@@ -200,7 +207,7 @@ clear path idx
 </pre>
             <br>
             <h3>Part 4: Convolutional Neural Network</h3>
-            <p>To train a convolutional neural network, we need to design the hidden layers first:</p>
+            <p>To train a convolutional neural network, we need to design the <strong class="keyword">hidden layers</strong> first:</p>
             <pre class="prettyprint linenums lang-m">layers = [
     imageInputLayer([28 28 1],'Name','input')
     convolution2dLayer([3 3],16,"Name","conv_1","Padding","same")
@@ -234,14 +241,13 @@ clear path idx
     softmaxLayer("Name","softmax_1")
     classificationLayer("Name","classification")];
 </pre>
-            <br>
             <p>For each layer description, you can read the MATLAB documentation <a
                     href="https://www.mathworks.com/help/deeplearning/ug/layers-of-a-convolutional-neural-network.html"
-                    target="_blank;">Specify Layers of Convolutional Neural Netowrk</a>.</p>
-            <p>You can also use the deep network designer for helping you to design the hidden layers - to use it, you
+                    target="_blank;">"Specify Layers of Convolutional Neural Network"</a>.</p>
+            <p>You can also use the deep network designer to help you design the hidden layers - to use it, you
                 just need to run <code>deepNetworkDesigner</code>.</p>
             <br>
-            <p>Having the hidden layers for our CNN is not enough, we also need to set the traning options:</p>
+            <p>Having the hidden layers for our CNN is not enough, we also need to set the <strong class="keyword">training options</strong>:</p>
             <pre class="prettyprint linenums lang-m">options = trainingOptions('sgdm', ...
     'MaxEpochs', 100, ...
     'MiniBatchSize', 256, ...
@@ -252,32 +258,34 @@ clear path idx
     'Verbose',false, ...
     'Plots','training-progress');
 </pre>
-            <p>The MATLAB documentation <a href="https://www.mathworks.com/help/deeplearning/ref/trainingoptions.html" target="_blank;">trainingOptions</a> explains what you can do to set up the training options.</p>
+            <p>The MATLAB documentation <a href="https://www.mathworks.com/help/deeplearning/ref/trainingoptions.html"
+                    target="_blank;">"trainingOptions"</a> explains what you can do to set up the training options.</p>
 
             <br>
             <p>Okay, we can start training the network now:</p>
             <pre class="prettyprint linenums lang-m">net = trainNetwork(imdsTrain,layers,options);
 </pre>
-            <p>Since we set <code>'Plots'</code> to <code>'training-progress'</code>, once we run this line, a new window will be popped up.</p>
+            <p>Since we set <code>'Plots'</code> to <code>'training-progress'</code>, once we run this line, a new
+                window will pop up.</p>
             <p>This window will plot the training progress during training.</p>
-            <p>This following image is my final result of the training progress:</p>
+            <p>This following image is the final result of my training progress:</p>
             <img src="../img/fashionNMIST/trainingProgess.PNG" alt="Training Process" class="center">
             <p>(I actually re-ran all my codes to obtain this image...)</p>
             <br>
-            <h3>Part 4: Classify the Testing Set</h3>
+            <h3>Part 5: Classify the Testing Set</h3>
             <p>After training the model, of course we want to use it to classify the testing dataset.</p>
-            <p>To do so, we only need to run 1 line:</p>
+            <p>To do so, we only need to run 1 line of code:</p>
             <pre class="prettyprint linenums lang-m">label = classify(net, imdsTest);</pre>
 
             <br>
-            <h3>Part 5: Create csv for Submission</h3>
-            <p>Lastly, we need to save our results into a csv file such that we can submit the results into Kaggle:</p>
+            <h3>Part 6: Create a .csv file for Submission</h3>
+            <p>Lastly, we need to save our results into a <em>.csv</em> file so we may submit them to Kaggle:</p>
             <pre class="prettyprint linenums lang-m">T = table(ID, label);
 writetable(T, "result.csv");
 </pre>
 
             <br>
-            <h3>Part 6: Delete the Folders "train" and "test" (Optional!)</h3>
+            <h3>Part 7: Delete the Folders "train" and "test" (Optional!)</h3>
             <p>The last thing you may want to do is to delete the "train" and "test" folders.</p>
             <p>You can run the following two lines to delete those two folders:</p>
             <pre class="prettyprint linenums lang-m">rmdir("train", "s");
