--- a/game/game.html
+++ b/game/game.html
@@ -14,6 +14,7 @@
     <canvas id = "gameCanvas"></canvas>
     <script src="map.js"></script>
     <script src="slime.js"></script>
+    <script src="box.js"></script>
     <script src="game.js"></script>
 </body>
 </html>
