--- a/projects/shallowWaterAnimation.html
+++ b/projects/shallowWaterAnimation.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:600,600i" rel="stylesheet"> <!-- for math use -->
     <link rel="stylesheet" href="../css/font-awesome-5.8.1/all.css">
+    <!-- Code Display use -->
+    <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?skin=desert"></script>
+    <link rel="stylesheet" href="../css/skin.css">
 </head>
 
 <body onload="restHeight('shallowWaterAnimation'); setHeight()" onresize="location.reload()" onresize="setHeight()">
@@ -117,6 +120,11 @@
                 <li>\(y \in [-1, 1]\)</li>
                 <li>number of physical cells: 61</li>
             </ul>
+            <br>
+            <h3>MATLAB Codes</h3>
+            <p>You can find my codes for this project <a href="https://github.com/vertli/Shallow-Water-Equation-Animation" target="_blank;">here</a>.</p>
+            <p><strong class="warning">Note:</strong> Codes will be privated between September and December every year.</p>
+
             <br>
             <h3>Results</h3>
             <p>The following plots show how the shallow water looks like at \(t=0\), \(t=1.5\), and \(t=3\):</p>
