--- a/projects/shallowWaterAnimation.html
+++ b/projects/shallowWaterAnimation.html
@@ -123,7 +123,7 @@
             <br>
             <h3>MATLAB Codes</h3>
             <p>You can find my codes for this project <a href="https://github.com/vertli/Shallow-Water-Equation-Animation" target="_blank;">here</a>.</p>
-            <p><strong class="warning">Note:</strong> Codes will be privated between September and December every year.</p>
+            <p><strong class="warning">Note:</strong> Codes will be private between September and December every year.</p>
 
             <br>
             <h3>Results</h3>
