--- a/projects/rdtProtocol.html
+++ b/projects/rdtProtocol.html
@@ -42,13 +42,13 @@
                 (Winter 2021) at
                 Waterloo.
             </p>
-            <p>In this assignment, I needed to implement a <strong>Reliable Data Transfer (RDT)</strong> protocol such
+            <p>In this assignment, I needed to implement a <strong class="keyword">Reliable Data Transfer (RDT)</strong>
+                protocol such
                 that a sender could use this protocol to faithfully transfer a text file to a receiver via an unreliable
                 network.</p>
-            <p>The programming language I used for this assignment is <strong>Java</strong>.<br>
+            <p>The programming language I used for this assignment is <strong class="keyword">Java</strong>.<br>
                 (I believe I was one of the few students, perhaps the only one, who used Java — most others used
-                Python…)
-            </p>
+                Python…)</p>
             <p>To implement and test this protocol, I had to write the following three programs:</p>
             <ul>
                 <li>Sender</li>
@@ -60,26 +60,25 @@
             <h3>Reliable Data Transfer (RDT) Protocol</h3>
             <p>The RDT protocol needs to:</p>
             <ul>
-                <li>Handle network errors (i.e., packet loss)</li>
-                <li>Packet Reordering</li>
-                <li>Duplicate packets</li>
+                <li>handle network errors (i.e., packet loss)</li>
+                <li>packet reordering</li>
+                <li>duplicate packets</li>
             </ul>
 
             <p>For simplicity, this protocol is unidirectional:</p>
             <ul>
-                <li>Text file data will only flow from the sender to the receiver</li>
-                <li>The <strong>acknowledgments (ACKs)</strong> will only flow from the receiver to the sender</li>
+                <li>Text file data will only flow from the sender to the receiver.</li>
+                <li>The <strong class="keyword">acknowledgments (ACKs)</strong> will only flow from the receiver to the
+                    sender.</li>
             </ul>
 
             <p>When the sender wants to send packets to the receiver, he/she will send them to the network emulator
                 instead of the receiver directly.<br>
                 Then, the network emulator will send those packets to the receiver.<br>
-                However, the network emulator may discard the packets randomly.
-            </p>
+                However, the network emulator may discard the packets randomly.</p>
             <p>Similarly, the receiver will send ACKs to the network emulator, the network emulator will then send those
                 ACKs to the sender.<br>
-                The network emulator will also discard those ACKs randomly.
-            </p>
+                The network emulator will also discard those ACKs randomly.</p>
             <img src="../img/RDTprotocol/RDT_1.png" class="center">
             <br>
 
@@ -99,13 +98,11 @@ String data;</pre>
             </ol>
 
             <p><code>seqnum</code> represents the sequence number of the packet.<br>
-                The first packet should have <code>seqnum = 0</code>.
-            </p>
+                The first packet should have <code>seqnum = 0</code>.</p>
 
-            <p><code>length</code>is the number of characters in the <code>data</code> field.<br>
+            <p><code>length</code> is the number of characters in the <code>data</code> field.<br>
                 The range of it is between 0 and 500 (inclusive).<br>
-                For ACK or EOT packet, the length should be 0.
-            </p>
+                For ACK or EOT packet, the length should be 0.</p>
 
             <p>To allow different programs to receive the same type of object, the <code>Packet</code> class needs to
                 implement the
@@ -115,7 +112,7 @@ String data;</pre>
             <p>To create a <code>Packet</code> object for a data packet, we do</p>
             <pre
                 class="prettyprint linenums lang-java">Packet packet = new Packet(int type, int seqnum, String data);</pre>
-            <br>
+
 
             <p>To create a <code>Packet</code> object for an ACK or EOT packet, we do</p>
             <pre class="prettyprint linenums lang-java">Packet packet = new Packet(int type, int seqnum);</pre>
@@ -134,9 +131,9 @@ String data;</pre>
                 class="prettyprint linenums lang-java">UDP udp = new UDP(String destIP, String destPort, String sourcePort, int timeout);</pre>
             <p>where</p>
             <ul>
-                <li><code>destIP</code> is the the destination IP address</li>
-                <li><code>destPort</code> is the port number used by the destination</li>
-                <li><code>sourcePort</code> is the port number used by the source</li>
+                <li><code>destIP</code> is the the destination IP address,</li>
+                <li><code>destPort</code> is the port number used by the destination,</li>
+                <li><code>sourcePort</code> is the port number used by the source, and</li>
                 <li><code>timeout</code> is the timeout of a packet (optional, default value is 0)</li>
             </ul>
 
@@ -147,16 +144,13 @@ String data;</pre>
             <p>If the IP address for the destination host cannot be found, an error will also be returned.</p>
 
             <p>After creating a <code>UDP</code> object, we can start the UDP connection between the source and the
-                destination.
-            </p>
+                destination.</p>
             <pre class="prettyprint linenums lang-java">udp.startConnection();</pre>
-            <br>
 
             <p>Then, we can start sending packets from the source to the destination or receiving packets from the
                 destination to the source.</p>
             <p>To send a packet, we do</p>
             <pre class="prettyprint linenums lang-java">udp.send(Packet packet);</pre>
-            <br>
 
             <p>When sending a <code>Packet</code> object, UDP will first convert it into an array of bytes.<br>
                 Then, the array of bytes will be encapsulated into a <code>DatagramPacket</code> object from the
@@ -166,7 +160,6 @@ String data;</pre>
 
             <p>To receive a packet, we do</p>
             <pre class="prettyprint linenums lang-java">Packet receivedPacket = udp.receive();</pre>
-            <br>
 
             <p>The <code>UDP</code> object will wait for a <code>DatagramPacket</code> object to arrive infinitely if
                 <code>timeout = 0</code>.<br>
@@ -199,13 +192,11 @@ String data;</pre>
 
             <p>Note that the RDT protocol is pipelined — meaning the sender program can send at most 30 packets
                 simultaneously.<br>
-                Thus, we need to create 30 threads and do multi-threading here.
-            </p>
+                Thus, we need to create 30 threads and do multi-threading here.</p>
 
             <p>Each thread will send one data packet and receive one ACK packet (or receive nothing if timeout).<br>
                 If the corresponding ACK packet is not received, the data packet will be re-transferred and reset the
-                timer.
-            </p>
+                timer.</p>
 
             <p>Note that, for example, if thread 1 sends a data packet with <code>seqnum = 1</code>, it may receive an
                 ACK packet with <code>seqnum &#8800; 1</code>.<br>
@@ -219,8 +210,9 @@ String data;</pre>
                 threads have finished their tasks.<br>
                 This allows the sender program to resend the data packet if the corresponding ACK packet does not arrive
                 within the timeout period.<br>
-                Moreover, this can ensure <strong>reliable transmission</strong> and <strong>congestion control</strong>
-                for the RDT protocol.</p>
+                Moreover, this can ensure <strong class="keyword">reliable transmission</strong> and
+                <strong class="keyword">congestion control</strong> for the RDT protocol.
+            </p>
 
             <p>Once all the data packets have been sent and all corresponding ACK packets have been received, the sender
                 program will send an EOT packet.<br>
@@ -229,19 +221,21 @@ String data;</pre>
             </p>
 
             <p>When the sender program sends out a packet, it will record the packet’s sequence number into a log file,
-                <code>seqnum.log</p>code>.</p>
+                <code>seqnum.log</code>.
+            </p>
 
-            <p>When the sender program receives an ACK packet, it will record the ACK packet’s sequence number into a log file, <code>ack.log</code>.
+            <p>When the sender program receives an ACK packet, it will record the ACK packet’s sequence number into a
+                log file, <code>ack.log</code>.
             </p>
             <br>
 
             <h3>Receiver Program</h3>
             <p>To execute the <code>receiver</code> program, we need the following command-line arguments:</p>
             <ul>
-                <li>The hostname for the network emulator</li>
-                <li>The UDP port number used by the network emulator to receive ACKs from the receiver</li>
-                <li>The UDP port number used by the receiver to receive data from the network emulator</li>
-                <li>The name of the file into which the received data is written</li>
+                <li>the hostname for the network emulator</li>
+                <li>the UDP port number used by the network emulator to receive ACKs from the receiver</li>
+                <li>the UDP port number used by the receiver to receive data from the network emulator</li>
+                <li>the name of the file into which the received data is written</li>
             </ul>
 
             <p>After executing the <code>receiver</code> program with those 4 arguments, the program will create a
@@ -272,14 +266,14 @@ String data;</pre>
             <h3>Network Emulator</h3>
             <p>To execute the <code>network emulator</code> program, we need the following command-line arguments:</p>
             <ul>
-                <li>The receiver’s network address</li>
-                <li>The receiver’s receiving UDP port number</li>
-                <li>The receiving UDP port number in the receiver direction</li>
-                <li>The sender’s network address</li>
-                <li>The sender’s receiving UDP port number</li>
-                <li>The receiving UDP port number in the sender direction</li>
-                <li>The packet discard probability</li>
-                <li>The verbose-mode</li>
+                <li>the receiver’s network address</li>
+                <li>the receiver’s receiving UDP port number</li>
+                <li>the receiving UDP port number in the receiver direction</li>
+                <li>the sender’s network address</li>
+                <li>the sender’s receiving UDP port number</li>
+                <li>the receiving UDP port number in the sender direction</li>
+                <li>the packet discard probability</li>
+                <li>the verbose-mode</li>
             </ul>
 
             <p>The verbose mode is either 0 or 1.<br>
@@ -312,17 +306,27 @@ String data;</pre>
             <br>
 
             <h3>Demo</h3>
-                <p>The following video is a demo of this project.</p>
+            <p>The following video is a demo of this project.</p>
 
-                <iframe width="560" height="315" class="center" src="https://www.youtube.com/embed/kp_RD6BCqKs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="center" src="https://www.youtube.com/embed/kp_RD6BCqKs" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
 
-                <p>In this demo, I run the <code>network emulator</code> program, the <code>receiver</code> program, and the <code>sender</code> program in the Waterloo CS Undergrad Environment (where the course professor and TAs test and mark my programs).</p>
-                <p>The left window is the <code>network emulator</code> program, the top right window is the <code>receiver</code> program, and the bottom right window is the <code>sender</code> program.</p>
-                <p>I run the <code>network emulator</code> program in the machine <code>ubuntu1804-010</code> and I run the other two programs in the machine <code>ubuntu1804-002</code>.</p>
-                <p>Note that in general, those three programs should be run on three different machines.<br>
-                    However, when I recorded this video (in May), only two machines were available.<br>
-                    But when I tested and submitted this project in March, those programs had run on three different machines for sure.
-                    </p>
+            <p>In this demo, I run the <code>network emulator</code> program, the <code>receiver</code> program, and the
+                <code>sender</code> program in the Waterloo CS Undergrad Environment (where the course professor and TAs
+                test and mark my programs).
+            </p>
+            <p>The left window is the <code>network emulator</code> program, the top right window is the
+                <code>receiver</code> program, and the bottom right window is the <code>sender</code> program.
+            </p>
+            <p>I run the <code>network emulator</code> program in the machine <code>ubuntu1804-010</code> and I run the
+                other two programs in the machine <code>ubuntu1804-002</code>.</p>
+            <p>Note that in general, those three programs should be run on three different machines.<br>
+                However, when I recorded this video (in May), only two machines were available.<br>
+                But when I tested and submitted this project in March, those programs had run on three different
+                machines for sure.
+            </p>
         </section>
 
         <footer id="footer">
