--- a/arts.html
+++ b/arts.html
@@ -18,7 +18,19 @@
       <a href="./arts.html">Arts</a>
       <a href="./contact.html">Contact</a>
       <div class="topnav-right">
-        <a href="/doc/NewResume_CKLI.pdf">Résumé</a>
+        <!-- reverse order plz! (as my CSS sucks) -->
+<!--
+        <div class="dropdown">
+          <button class="dropbtn">Course Notes
+          <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="./notes.html">CS 230</a>
+            <a href="./notes.html">CS 246</a>
+          </div>
+        </div>
+-->
+        <a href="/doc/NewResume_CKLi.pdf">Résumé</a>
       </div>
       <a href="javascript:void(0);" class="icon" onclick="navbarUse()">
         <i class="fa fa-bars"></i>
