--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
     <a href="./projects.html">Projects</a>
     <a href="./contact.html">Contact</a>
     <div class="topnav-right">
-      <a href="/doc/NewResume_CKLi.pdf">Résumé</a>
+      <a href="/doc/resume_CKLi.pdf">Résumé</a>
     </div>
     <a href="javascript:void(0);" class="icon" onclick="navbarUse()">
       <i class="fa fa-bars"></i>
