add RDT project

--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,45 @@
       </div>
 
       <div class="row">
+        <!-- Reliable Data Transfer Protocol -->
+        <div class="card java col-6 col-sm-6 col-md-6">
+          <div class="content">
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="./img/RDTprotocol/RDT_2.PNG">
+                </div>
+                <div class="flip-card-back">
+                  <div class="back-text">
+                    <h4>Summary</h4>
+                    <p>A reliable data transfer (RDT) protocol for my second coding assignments for one of my
+                      university computer science courses (CS436/636).<br>
+                      This project implemented a RDT protocol for both sender and receiver, and also a unreliable newtork emulator.<br>
+                      For more detail, click the hyperlink icon below (next to the title "RDT Protocol").</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <table>
+              <tr>
+                <td>
+                  <h4>RDT Protocol</h4>
+                </td>
+                <td class="rightSide"><a href="./projects/rdtProtocol.html"><i class="fas fa-link"></i></a>
+                </td>
+              </tr>
+            </table>
+            <table>
+              <tr>
+                <td class="thd">Language:</td>
+                <td>Java</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+
+
+
         <!-- Image Classification - Fashion-MNIST -->
         <div class="card matlab col-6 col-sm-6 col-md-6">
           <div class="content">
