Updated current status.

--- a/contact.html
+++ b/contact.html
@@ -27,10 +27,8 @@
     <div class="container">
       <section id="contact">
         <h1>Contact <scan class="keyword">Me</scan></h1>
-        <p>I am currently looking for full time job starting at all time.<br>
-        If you know any opportunities about software development or data science field...<br>
-        Please let me know!</p>
-        <p>Otherwise...<br>Feel free to message me if you want to have a chat!</p>
+        <p>I am currently NOT looking for full time job.<br>
+		However... Feel free to message me if you want to have a chat!</p>
         
         <table>
           <tr>
@@ -54,15 +52,16 @@
             <td><a href = "https://www.linkedin.com/in/vertckli/" target = "_blank;">Chun Kit (Calvin) Li</a></td>
           </tr>
         </table>
-        
+<!--
         <table>
           <tr>
             <th><i class="fab fa-artstation fa-sm"></i> Art Station (I don't really use it.)</th>
-          </tr>
+          </tr>		  
           <tr>
             <td><a href = "https://www.artstation.com/calvinli1" target = "_blank;">Vert Li</a></td>
           </tr>
         </table>
+-->
         <br>    
       </section>
       <footer id="footer">
