--- a/projects.html
+++ b/projects.html
@@ -15,9 +15,10 @@
     <a href="./index.html" class="active">Calvin Li</a>
     <a href="./about.html">About</a>
     <a href="./projects.html">Projects</a>
+    <a href="./huntingList.html">Pokemon TCG Hunting List</a>
     <a href="./contact.html">Contact</a>
     <div class="topnav-right">
-      <a href="/doc/resume_CKLi.pdf" target="_blank;">Résumé</a>
+      <a href="./doc/resume_CKLi.pdf" target="_blank;">Résumé</a>
     </div>
     <a href="javascript:void(0);" class="icon" onclick="navbarUse()">
       <i class="fa fa-bars"></i>
@@ -412,6 +413,7 @@
     </section>
 
     <footer id="footer">
+      <hr/>
       <p>Thanks For Coming. - Vert Li</p>
       <!-- icons -->
       <a href="mailto: vert.c.k.li@gmail.com" target="_blank;"><i class="fas fa-envelope-square fa-2x"></i></a>
@@ -419,7 +421,8 @@
       <a href="https://www.instagram.com/vert_arts/" target="_blank;"><i class="fab fa-instagram fa-2x"></i></a>
       <a href="https://github.com/vertli" target="_blank;"><i class="fab fa-github-square fa-2x"></i></a>
       <!-- icons -->
-      <p>Chun Kit (Calvin Vert) Li &copy; 2017 - 2020</p>
+      <p>Chun Kit (Calvin Vert) Li &copy; 2017 - 2021</p>
+      <hr/>
     </footer>
 
   </div>
