--- a/huntingList.html
+++ b/huntingList.html
@@ -10,7 +10,7 @@
     <link href="./pokemon/pokemon.css" rel="stylesheet">
   </head>
   
-  <body onload="restHeight('pokemonHuntingList'); setHeight()" onresize="location.reload()" onresize="setHeight()">
+  <body onload="restHeight('pokemonHuntingList')" onresize="location.reload()">
     
     <div class="topnav" id="myTopnav">
       <a href="./index.html" class="active">Calvin Li</a>
@@ -59,8 +59,9 @@
       </footer>
     </div>
 
-    <script type="module" src="./pokemon/huntingList.js"></script>
+    <script src="./pokemon/huntingList.js"></script>
     <script src="./js/style.js"></script>
+    <script src="./js/height.js"></script>
     <noscript>This website requires to use JavaScript!!!</noscript>
   </body>
   
