--- a/huntingList.html
+++ b/huntingList.html
@@ -59,7 +59,7 @@
       </footer>
     </div>
 
-    <script src="./pokemon/huntingList.js"></script>
+    <script type="module" src="./pokemon/huntingList.js"></script>
     <script src="./js/style.js"></script>
     <script src="./js/height.js"></script>
     <noscript>This website requires to use JavaScript!!!</noscript>
