fix keep reloading issue

--- a/huntingList.html
+++ b/huntingList.html
@@ -10,7 +10,7 @@
     <link href="./pokemon/pokemon.css" rel="stylesheet">
   </head>
   
-  <body onload="restHeight('pokemonHuntingList')" onresize="location.reload()">
+  <body>
     
     <div class="topnav" id="myTopnav">
       <a href="./index.html" class="active">Calvin Li</a>
