--- a/huntingList.html
+++ b/huntingList.html
@@ -29,6 +29,11 @@
     <div class="container">
       <section id="pokemonHuntingList">
         <h1>Pokemon <scan class="keyword">TCG</scan> Hunting List</h1>
+        <p>
+          This page displays the Pokémon cards I'm current looking for (mainly for showing my friends use only).<br>
+          All images are from the <a href="https://www.pokemon.com/us/pokemon-tcg/pokemon-cards/" target="_blank">official Pokémon TCG Card Database</a> or the <a href="https://www.tcgplayer.com/" target="_blank">TCG Player</a> website.<br>
+          I don't own any copyright of those images.
+        </p>
 
         <div class="row" id="card-gallery" aria-live="polite">
         </div>
