--- a/huntingList.html
+++ b/huntingList.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pokemon Hunting List</title>
+    <title>Pokémon Hunting List</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/font-awesome-5.8.1/all.css">
     <link href="./pokemon/pokemon.css" rel="stylesheet">
@@ -16,7 +16,7 @@
       <a href="./index.html" class="active">Calvin Li</a>
       <a href="./about.html">About</a>
       <a href="./projects.html">Projects</a>
-      <a href="./huntingList.html">Pokemon TCG Hunting List</a>
+      <a href="./huntingList.html">Pokémon TCG Hunting List</a>
       <a href="./contact.html">Contact</a>
       <div class="topnav-right">
         <a href="./doc/resume_CKLi.pdf" target="_blank;">Résumé</a>
@@ -28,7 +28,7 @@
     
     <div class="container">
       <section id="pokemonHuntingList">
-        <h1>Pokemon <scan class="keyword">TCG</scan> Hunting List</h1>
+        <h1>Pokémon <scan class="keyword">TCG</scan> Hunting List</h1>
         <p>
           This page displays the Pokémon cards I'm current looking for (mainly for showing my friends use only).<br>
           All images are from the <a href="https://www.pokemon.com/us/pokemon-tcg/pokemon-cards/" target="_blank">official Pokémon TCG Card Database</a> or the <a href="https://www.tcgplayer.com/" target="_blank">TCG Player</a> website.<br>
