--- a/arts.html
+++ b/arts.html
@@ -15,7 +15,7 @@
       <a href="./index.html" class="active">Calvin Li</a>
       <a href="./about.html">About</a>
       <a href="./projects.html">Projects</a>
-      <a href="./huntingList.html">Pokemon TCG Hunting List</a>
+      <a href="./huntingList.html">Pokémon TCG Hunting List</a>
       <a href="./arts.html">Arts</a>
       <a href="./contact.html">Contact</a>
       <div class="topnav-right">
