--- a/huntingList.html
+++ b/huntingList.html
@@ -44,14 +44,17 @@
           <button class="btn" onclick="filterSelection('stage2')">Stage 2 Pokémon</button>
           <button class="btn" onclick="filterSelection('pEX')">Pokémon EX</button>
           <button class="btn" onclick="filterSelection('pMEGA')">MEGA Pokémon</button>
-          <br>
           <button class="btn" onclick="filterSelection('pV')">Pokémon V</button>
           <button class="btn" onclick="filterSelection('pVMax')">Pokémon VMAX</button>
           <button class="btn" onclick="filterSelection('pVStar')">Pokémon VSTAR</button>
+          <br>
           <button class="btn" onclick="filterSelection('pex')">Pokémon ex</button>
           <button class="btn" onclick="filterSelection('item')">Item</button>
+          <button class="btn" onclick="filterSelection('tool')">Pokémon Tool</button>
           <button class="btn" onclick="filterSelection('stadium')">Stadium</button>
           <button class="btn" onclick="filterSelection('supporter')">Supporter</button>
+          <button class="btn" onclick="filterSelection('energy')">Energy</button>
+          <button class="btn" onclick="filterSelection('p151')">Pokémon 151</button>
         </div>
         
         <div class="" id="context">
