--- a/huntingList.html
+++ b/huntingList.html
@@ -34,6 +34,10 @@
           All images are from the <a href="https://www.pokemon.com/us/pokemon-tcg/pokemon-cards/" target="_blank">official Pokémon TCG Card Database</a> or the <a href="https://www.tcgplayer.com/" target="_blank">TCG Player</a> website.<br>
           I don't own any copyright of those images.
         </p>
+        <p>
+          By the way, the arrow buttons currently have bugs. (I don't know what is wrong here...)<br>
+          Please use the number buttons.
+        </p>
 
         
         <div id="filterList">
