add calendar page

--- a/projects.html
+++ b/projects.html
@@ -15,10 +15,17 @@
     <a href="./index.html" class="active">Calvin Li</a>
     <a href="./about.html">About</a>
     <a href="./projects.html">Projects</a>
-    <a href="./huntingList.html">Pokémon TCG Hunting List</a>
-    <a href="./contact.html">Contact</a>
+    <div class="dropdown">
+      <button class="dropbtn">Pokémon</button>
+      <div class="dropdown-content">
+        <a href="./pcCalendar.html">Pokémon TCG Calendar 2024</a>
+        <a href="./huntingList.html">TCG Hunting List</a>
+        <!-- <a href="./exchangeList.html">TCG Exchange List</a> -->
+      </div>
+    </div>
     <div class="topnav-right">
-      <a href="./doc/resume_CKLi.pdf" target="_blank;">Résumé</a>
+      <a href="./contact.html">Contact</a>
+      <!-- <a href="./doc/resume_CKLi.pdf" target="_blank;">Résumé</a> -->
     </div>
     <a href="javascript:void(0);" class="icon" onclick="navbarUse()">
       <i class="fa fa-bars"></i>
@@ -421,7 +428,7 @@
       <a href="https://www.instagram.com/vert_arts/" target="_blank;"><i class="fab fa-instagram fa-2x"></i></a>
       <a href="https://github.com/vertli" target="_blank;"><i class="fab fa-github-square fa-2x"></i></a>
       <!-- icons -->
-      <p>Chun Kit (Calvin Vert) Li &copy; 2017 - 2023</p>
+      <p>Chun Kit (Calvin Vert) Li &copy; 2017 - 2024</p>
       <hr/>
     </footer>
 
