--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,7 @@
       <div class="dropdown-content">
         <a href="./pcCalendar.html">Pokémon TCG Calendar 2024</a>
         <a href="./huntingList.html">TCG Hunting List</a>
+        <a href="./glcHuntingList.html">GLC Hunting List</a>
         <!-- <a href="./exchangeList.html">TCG Exchange List</a> -->
       </div>
     </div>
